# connector-c-docs

./: README.md
webhelp/: Makefile  build.properties  build.xml  xincluded-profiled.xml
webhelp/docsrc/: CMakeLists.txt  Makefile  bookinfo.xml  global.ent  main.docbook  preface.xml  url.ent
webhelp/docsrc/api/: change_global.php
webhelp/docsrc/api/charset/: book.xml  charsets.xml  data_structures.xml  entities.functions.xml  mariadb_convert_string.xml  mysql_get_character_set_info.xml  mysql_get_charset_by_name.xml  mysql_get_charset_by_nr.xml  mysql_set_character_set.xml  reference.xml
webhelp/docsrc/api/client_server/: book.xml  constants.xml  data_structures.xml  entities.functions.xml  mysql_affected_rows.xml  mysql_autocommit.xml  mysql_change_user.xml  mysql_character_set_name.xml  mysql_close.xml  mysql_commit.xml  mysql_data_seek.xml  mysql_debug.xml  mysql_debug_end.xml  (+91 more)
webhelp/docsrc/appendices/: changelog.xml  license.xml  quanda.xml
webhelp/docsrc/chapters/: installation.xml  introduction.xml
webhelp/docsrc/entities/: default-defs.ent  file.ent.in  funcref.ent.in  functions.ent.in  var.ent.in
webhelp/docsrc/examples/: CMakeLists.txt  mariadb_dyncol_list_named.c  mariadb_dyncol_list_num.c  mysql_affected_rows.c  mysql_autocommit.c  mysql_change_user.c  mysql_character_set_name.c  mysql_commit.c  mysql_data_seek.c  mysql_debug.c  mysql_errno.c  mysql_error.c  mysql_real_connect_start.c  nonblock_1.c
webhelp/docsrc/revhistory/: log.xml  log.xml.in
webhelp/docsrc/scripts/: add_funcref.php
webhelp/docsrc/xsl/: bzr.xsl  mariadb.xsl
webhelp/template/common/: main.js
webhelp/xsl/: webhelp-common.xsl
(+31 files in other folders)
